--- a/threadly/css/styles.css
+++ b/threadly/css/styles.css
@@ -18,6 +18,13 @@ form input {
     font-size: 36px;
     padding: 20px;
     width: 100%;
+    transition: background 2s, border-left 2s;
+}
+form input:focus {
+    background: #fff;
+    border-left: 2px solid #000;
+    box-shadow: none;
+    outline: none;
 }
 button.btn {
     background: transparent;
@@ -27,4 +34,8 @@ button.btn {
     font-size: 36px;
     padding: 20px 24px;
     transition: background 2s, color 2s;
+}
+.btn:hover {
+    background: #00f28f;
+    color: #fff;
 }
